fix: adjust modal width on mobile view

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -338,3 +338,7 @@ ul.wallet_footer {
     max-width: 24.5rem;
   }
 }
+
+.modal-sm {
+  width: 24rem;
+}
